deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: covid-shanghai-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    component: covid-shanghai-server
  type: ClusterIP
