deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: covid-shanghai-ingress
spec:
  rules:
    - host: preview.test.osinfra.cn
      http:
        paths:
          - backend:
              service:
                name: covid-shanghai-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - preview.test.osinfra.cn
      secretName: covid-shanghai-secret
